works but index page overlapping needs to be fixed

--- a/css/style.css
+++ b/css/style.css
@@ -289,11 +289,13 @@ h1, h2, h3, h4, h5, h6 {
   content: 'viewport-units-buggyfill; height:100vh; width: 100vw';
   display: table-cell;
   vertical-align: middle;
+
+
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .fh5co-text-wrap {
     height: auto !important;
-    padding: 3em 0;
+    padding: 5em 0;
     height: 100vh;
     width: 100vw;
     content: 'viewport-units-buggyfill; height:100vh; width: 100vw';
@@ -347,6 +349,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 50px;
     font-weight: 400;
     letter-spacing: 2px;
+
   }
 }
 #fh5co-header span {
